--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   shared_preferences: ^2.5.3
   carousel_slider: ^5.0.0
+  smooth_page_indicator: ^1.2.1
+  pocketbase: ^0.22.0
 
 dev_dependencies:
   flutter_test:
